--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+fakeredis==1.4.4
 flake8==3.8.4
+freezegun==1.0.0
 pytest==6.1.2
-requests==2.24.0
-urllib3==1.25.11
+redis==3.5.3
+requests==2.25.0
+urllib3==1.26.2
