--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-fakeredis==1.4.4
+fakeredis==1.4.5
 flake8==3.8.4
 freezegun==1.0.0
-pydantic==1.7.2
+pydantic==1.7.3
 pytest==6.1.2
+pytest-mock==3.3.1
 redis==3.5.3
 requests==2.25.0
 urllib3==1.26.2
