Install wheel before PyPI deploy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,7 @@ jobs:
       - name: Build the Package
         run: |
           rm -rf dist/*
+          pip install wheel
           python setup.py sdist bdist_wheel
 
       - name: Publishing to PyPI
