--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          coverage run --branch -m pytest
+          coverage run --branch -m pytest -v
 
       - name: Coverage report
         run: coverage report
