Added "docs" job to CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,3 +72,13 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
+
+  docs:
+    name: Build and Publish docs
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: asciidoctor-ghpages
+        uses: manoelcampos/asciidoctor-ghpages-action@v2
