--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,5 +74,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: asciidoctor-ghpages
-        uses: manoelcampos/asciidoctor-ghpages-action@v2
+      - name: Build
+        run: docker run --rm -v $(pwd)/docs/:/documents/ asciidoctor/docker-asciidoctor asciidoctor -D build '*.adoc'
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.1
+        with:
+          branch: gh-pages
+          folder: docs/build
