--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,9 @@
 testpaths = tests
 
 [flake8]
-max-line-length = 120
+select = C, E, W, F, BLK
+max-line-length = 88
+extend-ignore = E203, W503
 max-complexity = 10
 
 [coverage:run]
