--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 testpaths = tests
 
 [flake8]
-select = C, E, W, F, BLK
+select = C, E, W, F, BLK, I
 max-line-length = 88
 extend-ignore = E203, W503
 max-complexity = 10
@@ -20,3 +20,6 @@ skip_covered = True
 show_missing = True
 exclude_lines =
     @abc.abstractmethod
+
+[isort]
+profile = black
