--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 testpaths = tests
 
 [flake8]
-select = C, E, W, F, BLK, I
+select = C, E, W, F, I
 max-line-length = 88
 extend-ignore = E203, E501, W503
 max-complexity = 10
