Deleted E501 from extend-ignore

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ testpaths = tests
 [flake8]
 select = C, E, W, F, I
 max-line-length = 88
-extend-ignore = E203, E501, W503
+extend-ignore = E203, W503
 max-complexity = 10
 
 [coverage:run]
