--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,9 @@
 testpaths = tests
 
 [flake8]
-max-line-length = 120
+select = C, E, W, F, I
+max-line-length = 88
+extend-ignore = E203, W503
 max-complexity = 10
 
 [coverage:run]
@@ -18,3 +20,6 @@ skip_covered = True
 show_missing = True
 exclude_lines =
     @abc.abstractmethod
+
+[isort]
+profile = black
