Added `omit` to coverage:report

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,11 +16,15 @@ branch = True
 
 [coverage:report]
 precision = 2
-fail_under = 97.54
+fail_under = 98.79
 skip_covered = True
 show_missing = True
 exclude_lines =
     @abc.abstractmethod
+omit =
+    docs/src/logging/tutorial003.py
+    docs/src/logging/tutorial004.py
+    docs/src/logging/tutorial005.py
 
 [isort]
 profile = black
