Added exclude __init__.py to flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ select = C, E, W, F, I
 max-line-length = 88
 extend-ignore = E203, W503
 max-complexity = 10
+exclude = __init__.py
 
 [coverage:run]
 source =
@@ -16,7 +17,7 @@ branch = True
 
 [coverage:report]
 precision = 2
-fail_under = 98.79
+fail_under = 98.35
 skip_covered = True
 show_missing = True
 exclude_lines =
