--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ select = C, E, W, F, I
 max-line-length = 88
 extend-ignore = E203, W503
 max-complexity = 10
+exclude = __init__.py
 
 [coverage:run]
 source =
@@ -16,11 +17,15 @@ branch = True
 
 [coverage:report]
 precision = 2
-fail_under = 97.54
+fail_under = 98.35
 skip_covered = True
 show_missing = True
 exclude_lines =
     @abc.abstractmethod
+omit =
+    docs/src/logging/tutorial003.py
+    docs/src/logging/tutorial004.py
+    docs/src/logging/tutorial005.py
 
 [isort]
 profile = black
