--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,3 @@
-[tool:pytest]
-testpaths = tests
-
 [flake8]
 select = C, E, W, F, I
 max-line-length = 88
@@ -14,6 +11,7 @@ source =
     docs/src
     tests
 branch = True
+parallel = True
 
 [coverage:report]
 precision = 2
