--- a/setup.cfg
+++ b/setup.cfg
@@ -17,11 +17,13 @@ branch = True
 
 [coverage:report]
 precision = 2
-fail_under = 98.35
+fail_under = 98.38
 skip_covered = True
 show_missing = True
 exclude_lines =
     @abc.abstractmethod
+    Protocol
+    CorvaApiSdk
 omit =
     docs/src/logging/tutorial003.py
     docs/src/logging/tutorial004.py
