DC-2396 Cache with expiry by key (#55)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,3 @@
-[tool:pytest]
-testpaths = tests
-
 [flake8]
 select = C, E, W, F, I
 max-line-length = 88
@@ -14,16 +11,15 @@ source =
     docs/src
     tests
 branch = True
+parallel = True
 
 [coverage:report]
 precision = 2
-fail_under = 98.40
+fail_under = 98.60
 skip_covered = True
 show_missing = True
 exclude_lines =
     @abc.abstractmethod
-    Protocol
-    CorvaApiSdk
 omit =
     docs/src/logging/tutorial003.py
     docs/src/logging/tutorial004.py
