--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,8 @@ omit =
 
 [isort]
 profile = black
+
+[mypy]
+
+[mypy-setuptools.*,docs.src.*,requests_mock.*,raygun4py.*,rollbar.*,sentry_sdk.*,fakeredis.*]
+ignore_missing_imports = True
