--- a/requirements-lint.txt
+++ b/requirements-lint.txt
@@ -3,3 +3,7 @@ black==22.3.0
 flake8==3.9.2
 flake8-isort==4.0.0
 isort==5.8.0
+mypy==0.950
+types-freezegun~=1.1.9
+types-redis~=4.2.4
+types-requests~=2.27.27
