--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,11 @@ omit =
 profile = black
 
 [mypy]
+exclude = (?x)(
+    ^docs/src/cache/tutorial004\.py$
+    | ^docs/src/cache/tutorial005\.py$
+  )
+
 
 [mypy-setuptools.*,docs.src.*,requests_mock.*,raygun4py.*,rollbar.*,sentry_sdk.*,fakeredis.*]
 ignore_missing_imports = True
