--- a/setup.cfg
+++ b/setup.cfg
@@ -15,11 +15,12 @@ parallel = True
 
 [coverage:report]
 precision = 2
-fail_under = 98.09
+fail_under = 97.92
 skip_covered = True
 show_missing = True
 exclude_lines =
     @abc.abstractmethod
+    if TYPE_CHECKING
 omit =
     docs/src/logging/tutorial003.py
     docs/src/logging/tutorial004.py
