--- a/setup.cfg
+++ b/setup.cfg
@@ -15,11 +15,12 @@ parallel = True
 
 [coverage:report]
 precision = 2
-fail_under = 98.09
+fail_under = 98.01
 skip_covered = True
 show_missing = True
 exclude_lines =
     @abc.abstractmethod
+    if TYPE_CHECKING
 omit =
     docs/src/logging/tutorial003.py
     docs/src/logging/tutorial004.py
@@ -27,3 +28,13 @@ omit =
 
 [isort]
 profile = black
+
+[mypy]
+exclude = (?x)(
+    ^docs/src/cache/tutorial004\.py$
+    | ^docs/src/cache/tutorial005\.py$
+  )
+
+
+[mypy-setuptools.*,docs.src.*,requests_mock.*,raygun4py.*,rollbar.*,sentry_sdk.*,fakeredis.*]
+ignore_missing_imports = True
