Added `antora` for documentation versioning

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,33 +8,33 @@ exclude = __init__.py
 [coverage:run]
 source =
     src
-    docs/src
+    docs/modules/ROOT/examples
     tests
 branch = True
 parallel = True
 
 [coverage:report]
 precision = 2
-fail_under = 98.01
+fail_under = 97.95
 skip_covered = True
 show_missing = True
 exclude_lines =
     @abc.abstractmethod
     if TYPE_CHECKING
 omit =
-    docs/src/logging/tutorial003.py
-    docs/src/logging/tutorial004.py
-    docs/src/logging/tutorial005.py
+    docs/modules/ROOT/examples/logging/tutorial003.py
+    docs/modules/ROOT/examples/logging/tutorial004.py
+    docs/modules/ROOT/examples/logging/tutorial005.py
 
 [isort]
 profile = black
 
 [mypy]
 exclude = (?x)(
-    ^docs/src/cache/tutorial004\.py$
-    | ^docs/src/cache/tutorial005\.py$
+    ^docs/modules/ROOT/examples/cache/tutorial004\.py$
+    | ^docs/modules/ROOT/examples/cache/tutorial005\.py$
   )
 
 
-[mypy-setuptools.*,docs.src.*,requests_mock.*,raygun4py.*,rollbar.*,sentry_sdk.*,fakeredis.*]
+[mypy-setuptools.*,docs.*,requests_mock.*,raygun4py.*,rollbar.*,sentry_sdk.*,fakeredis.*]
 ignore_missing_imports = True
