--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,4 +84,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           branch: gh-pages
-          folder: docs/build
+          folder: docs/build/site
