omited doc test

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ omit =
     docs/modules/ROOT/examples/logging/tutorial003.py
     docs/modules/ROOT/examples/logging/tutorial004.py
     docs/modules/ROOT/examples/logging/tutorial005.py
+    docs/modules/ROOT/examples/logging/tutorial008.py
 
 [isort]
 profile = black
