Updated `followable` docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ parallel = True
 
 [coverage:report]
 precision = 2
-fail_under = 98.03
+fail_under = 97.68
 skip_covered = True
 show_missing = True
 exclude_lines =
@@ -25,6 +25,7 @@ omit =
     docs/modules/ROOT/examples/logging/tutorial003.py
     docs/modules/ROOT/examples/logging/tutorial004.py
     docs/modules/ROOT/examples/logging/tutorial005.py
+    docs/modules/ROOT/examples/followable/tutorial001.py
 
 [isort]
 profile = black
