--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ omit =
     docs/modules/ROOT/examples/logging/tutorial004.py
     docs/modules/ROOT/examples/logging/tutorial005.py
     docs/modules/ROOT/examples/followable/tutorial001.py
+    src/corva/__init__.py
 
 [isort]
 profile = black
