--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ omit =
     docs/modules/ROOT/examples/logging/tutorial005.py
     docs/modules/ROOT/examples/followable/tutorial001.py
     src/corva/__init__.py
+    src/version.py
 
 [isort]
 profile = black
