--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ exclude = __init__.py
 source =
     src
     docs/modules/ROOT/examples
-    tests
+;    tests
 branch = True
 parallel = True
 
@@ -21,6 +21,7 @@ show_missing = True
 exclude_lines =
     @abc.abstractmethod
     if TYPE_CHECKING
+    class .*Protocol.*
 omit =
     docs/modules/ROOT/examples/logging/tutorial003.py
     docs/modules/ROOT/examples/logging/tutorial004.py
