--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         run: echo "PYTHON_VERSIONS=$PYTHON_VERSIONS" >> $GITHUB_ENV
 
   static:
-    name: Automated Static analysis on Python ${{ matrix.python-version }}
+    name: Static analysis on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     needs: set-matrix
     continue-on-error: true
@@ -39,7 +39,7 @@ jobs:
         run: make lint
 
   test:
-    name: Automated Testing on Python ${{ matrix.python-version }}
+    name: Testing on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     needs: set-matrix
     continue-on-error: true
