some gh workflow improvement

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,10 +61,26 @@ jobs:
       - name: Run
         run: make coverage
 
+  check-static-and-test-status:
+    name: Check if all jobs passed
+    runs-on: ubuntu-latest
+    needs: [ static, test ]  # Ensure all jobs complete before checking
+    if: always()  # This ensures the job runs even if previous jobs failed
+
+    steps:
+      - name: Fail if any job failed
+        run: |
+          if [ "${{ needs.static.result }}" == "failure" ] || [ "${{ needs.test.result }}" == "failure" ]; then
+            echo "One or more jobs failed."
+            exit 1
+          else
+            echo "All jobs passed successfully."
+          fi
+
   deploy:
     name: Build and publish to PyPI
 
-    needs: [ static, test ]
+    needs: check-static-and-test-status
 
     if: contains(github.ref, 'tags/v')
 
