--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
     name: Static analysis on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     needs: set-matrix
-    continue-on-error: true
     strategy:
+      fail-fast: false  # Ensure all matrix jobs run to completion
       matrix:
         python-version: ${{ fromJSON(needs.set-matrix.outputs.python_versions) }}
 
@@ -42,8 +42,8 @@ jobs:
     name: Testing on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     needs: set-matrix
-    continue-on-error: true
     strategy:
+      fail-fast: false  # Ensure all matrix jobs run to completion
       matrix:
         python-version: ${{ fromJSON(needs.set-matrix.outputs.python_versions) }}
 
@@ -62,15 +62,31 @@ jobs:
         run: make coverage
 
   check-static-and-test-status:
-    name: Check if all jobs passed
+    name: Verify All Jobs Succeeded
     runs-on: ubuntu-latest
     needs: [ static, test ]  # Ensure all jobs complete before checking
     if: always()  # This ensures the job runs even if previous jobs failed
 
     steps:
-      - name: Fail if any job failed
+      - name: Check Job Results
         run: |
-          if [ "${{ needs.static.result }}" == "failure" ] || [ "${{ needs.test.result }}" == "failure" ]; then
+          # Initialize a flag to track failures
+          FAILED=0
+          
+          # Check the result of the 'static' job
+          if [ "${{ needs.static.result }}" == "failure" ]; then
+            echo "Static analysis job failed."
+            FAILED=1
+          fi
+          
+          # Check the result of the 'test' job
+          if [ "${{ needs.test.result }}" == "failure" ]; then
+            echo "Test job failed."
+            FAILED=1
+          fi
+          
+          # Exit with status 1 if any job failed
+          if [ "$FAILED" -ne 0 ]; then
             echo "One or more jobs failed."
             exit 1
           else
