--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ env:
 
 jobs:
 
-  set-matrix:
+  set-python-matrix:
     runs-on: ubuntu-latest
     outputs:
       python_versions: ${{ env.PYTHON_VERSIONS }}  # Pass the env variable as an output
@@ -18,7 +18,7 @@ jobs:
   static:
     name: Static analysis on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
-    needs: set-matrix
+    needs: set-python-matrix
     strategy:
       fail-fast: false  # Ensure all matrix jobs run to completion
       matrix:
@@ -41,7 +41,7 @@ jobs:
   test:
     name: Testing on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
-    needs: set-matrix
+    needs: set-python-matrix
     strategy:
       fail-fast: false  # Ensure all matrix jobs run to completion
       matrix:
