--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,8 @@ show_missing = True
 exclude_lines =
     @abc.abstractmethod
     if TYPE_CHECKING
+    class .*Protocol.*
+    @overload
 omit =
     docs/modules/ROOT/examples/logging/tutorial003.py
     docs/modules/ROOT/examples/logging/tutorial004.py
@@ -28,6 +30,7 @@ omit =
     docs/modules/ROOT/examples/followable/tutorial001.py
     src/corva/__init__.py
     src/version.py
+    src/plugin.py
 
 [isort]
 profile = black
