--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,10 +110,10 @@ jobs:
           python-version: 3.9
 
       - name: Install dependencies
-        run: pip install -U setuptools wheel
+        run: pip install -U setuptools wheel build
 
       - name: Build the package
-        run: python setup.py sdist bdist_wheel
+        run: python -m build
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@v1.4.2
