--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,8 @@ omit = [
 [tool.mypy]
 python_version = "3.9"
 mypy_path = "src"
+explicit_package_bases = true
+check_untyped_defs = true
 exclude = '''(?x)(
     ^docs/modules/ROOT/examples/cache/tutorial004\.py$
     | ^docs/modules/ROOT/examples/cache/tutorial005\.py$
