fix(CI): fix for `Build and publish docs` job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,7 +124,7 @@ jobs:
   docs:
     name: Build and publish docs
 
-    if: startsWith(github.ref, 'tags/v2.')  # Only for version 2.X.X
+    if: contains(github.ref, 'tags/v2.')  # Only for version 2.X.X
 
     needs: deploy
 
