fix: trigger CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,9 +124,10 @@ jobs:
   docs:
     name: Build and publish docs
 
-    if: contains(github.ref, 'tags/v2.')  # Only for version 2.X.X
+#    if: contains(github.ref, 'tags/v2.')  # Only for version 2.X.X
 
-    needs: deploy
+    needs: check-static-and-test-status
+#    needs: deploy
 
     runs-on: ubuntu-latest
 
