--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "corva-sdk"
 description = "SDK for building Corva DevCenter Python apps."
 readme = "README.md"
-version = "1.15.1"
+version = "1.15.2"
 license = { text = "The Unlicense" }
 authors = [
   { name = "Jordan Ambra", email = "jordan.ambra@corva.ai" }
@@ -18,7 +18,7 @@ dependencies = [
   "pydantic >=1.8.2, <2.0.0",
   "redis >=5.2.1, <6.0.0",
   "requests >=2.32.3, <3.0.0",
-  "urllib3==2.5.0"
+  "urllib3 >= 2.6.3, <3.0.0",
 ]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
